[package]
name = "projectebpf-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
aya-ebpf-bindings = "0.1.0"
network-types = "0.0.5"
projectebpf-common = { path = "../projectebpf-common"}


# [lib]
# name = "project_ebpf"
# path = "src/lib.rs"

[[bin]]
name = "projectebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
