[package]
name = "projectebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
projectebpf-common = { path = "../projectebpf-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
network-types = { version = "0.0.5" ,features = ["std"]}
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { version = "4.1", features = ["derive"] }

[[bin]]
name = "projectebpf"
path = "src/main.rs"
